Started fixing a href in buttons that should be onclick on several pages.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -813,10 +813,9 @@
 
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
-						<button class="round-button">
-							<a
-								href="https://www.linkedin.com/posts/ofidcrypt_microeconomies-activity-7382525484514869248-PEvj?utm_source=share&utm_medium=member_desktop&rcm=ACoAACFnCDYBwfKuDoF9-iqaUc5aGA7rri-IJRM">Learn
-								More</a>
+						<button class="round-button"
+							onclick="window.open('https://www.linkedin.com/posts/ofidcrypt_microeconomies-activity-7382525484514869248-PEvj?utm_source=share&utm_medium=member_desktop&rcm=ACoAACFnCDYBwfKuDoF9-iqaUc5aGA7rri-IJRM', '_blank')">
+							Learn More
 						</button>
 					</div>
 					<!-- Header -->
@@ -835,22 +834,22 @@
 
 						<!-- Token Buttons -->
 						<div class="token-button-container">
-							<button class="token-button-2"><a
-									href="https://solscan.io/token/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z"
-									target="_blank">Solscan</a></button>
-							<button class="token-button-2"><a
-									href="https://phantom.com/tokens/solana/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z?referralId=aniufb6dzjp"
-									target="_blank">Phantom</a></button>
-							<button class="token-button-2"><a
-									href="https://www.meteora.ag/dlmm/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5"
-									target="_blank">Meteora</a></button>
-							<button class="token-button-2"><a
-									href="https://jup.ag/tokens/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z"
-									target="_blank">Jupiter</a></button>
-							<button class="token-button-2"><a href="#" target="_blank">Raydium</a></button>
-							<button class="token-button-2"><a
-									href="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5"
-									target="_blank">GeckoTerminal</a></button>
+							<button class="token-button-2"
+								onclick="window.open('https://solscan.io/token/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z', '_blank')">Solscan</button>
+
+							<button class="token-button-2"
+								onclick="window.open('https://phantom.com/tokens/solana/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z?referralId=aniufb6dzjp', '_blank')">Phantom</button>
+
+							<button class="token-button-2"
+								onclick="window.open('https://www.meteora.ag/dlmm/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5', '_blank')">Meteora</button>
+
+							<button class="token-button-2"
+								onclick="window.open('https://jup.ag/tokens/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z', '_blank')">Jupiter</button>
+
+							<button class="token-button-2" onclick="window.open('#', '_blank')">Raydium</button>
+
+							<button class="token-button-2"
+								onclick="window.open('https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5', '_blank')">GeckoTerminal</button>
 
 							<footer class="token-button-help-text">
 								<p class="align-center">
