--- a/promote.html
+++ b/promote.html
@@ -304,11 +304,12 @@
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
 						<div class="button-pair">
-							<button class="round-button"><a href="#trailers">Trailers</a></button>
-							<button class="round-button"><a href="#">Our Work</a></button>
+							<button class="round-button" onclick="window.location.href='#trailers'">Trailers</button>
+							<button class="round-button" onclick="window.location.href='#'">Our Work</button>
 						</div>
+
 						<div class="button-pair">
-							<button class="round-button"><a href="#">Packages</a></button>
+							<button class="round-button" onclick="window.location.href='#'">Packages</button>
 						</div>
 					</div>
 				</header>
