--- a/bouncyball.html
+++ b/bouncyball.html
@@ -800,8 +800,9 @@
 
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
-						<button class="round-button">
-							<a href="https://ofidcrypt.ca/new-ofid-bouncy-ball-epb">Learn More</a>
+						<button class="round-button"
+							onclick="window.open('https://ofidcrypt.ca/new-ofid-bouncy-ball-epb', '_blank')">
+							Learn More
 						</button>
 					</div>
 					<!-- Header -->
@@ -820,33 +821,31 @@
 
 						<!-- Token Buttons -->
 						<div class="token-button-container">
-							<button class="token-button">
-								<a href="https://pump.fun/coin/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump"
-									target="_blank">
-									<span class="pump-text">Pump</span><span class="fun-text">Fun</span>
-								</a>
+							<button class="token-button"
+								onclick="window.open('https://pump.fun/coin/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump', '_blank')">
+								<span class="pump-text">Pump</span><span class="fun-text">Fun</span>
 							</button>
-							<button class="token-button"><a
-									href="https://phantom.com/tokens/solana/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?referralId=3hjgncz9qx4"
-									target="_blank">Phantom</a></button>
-							<button class="token-button"><a
-									href="https://moonshot.com/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?ref=NnJDmKfzpM"
-									target="_blank">Moonshot</a></button>
-							<button class="token-button"><a
-									href="https://jup.ag/tokens/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump"
-									target="_blank">Jupiter</a></button>
-							<button class="token-button"><a
-									href="https://raydium.io/swap/?inputMint=GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump&outputMint=4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R"
-									target="_blank">Raydium</a></button>
-							<button class="token-button"><a
-									href="https://www.coingecko.com/en/coins/bouncy-ball-of-ofid-fun"
-									target="_blank">CoinGecko</a></button>
-							<button class="token-button"><a
-									href="https://coinranking.com/coin/h0ynh5w7U+bouncyballofofidfun-epb"
-									target="_blank">CoinRanking</a></button>
-							<button class="token-button"><a
-									href="https://solscan.io/token/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump"
-									target="_blank">Solscan</a></button>
+
+							<button class="token-button"
+								onclick="window.open('https://phantom.com/tokens/solana/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?referralId=3hjgncz9qx4', '_blank')">Phantom</button>
+
+							<button class="token-button"
+								onclick="window.open('https://moonshot.com/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump?ref=NnJDmKfzpM', '_blank')">Moonshot</button>
+
+							<button class="token-button"
+								onclick="window.open('https://jup.ag/tokens/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump', '_blank')">Jupiter</button>
+
+							<button class="token-button"
+								onclick="window.open('https://raydium.io/swap/?inputMint=GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump&outputMint=4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R', '_blank')">Raydium</button>
+
+							<button class="token-button"
+								onclick="window.open('https://www.coingecko.com/en/coins/bouncy-ball-of-ofid-fun', '_blank')">CoinGecko</button>
+
+							<button class="token-button"
+								onclick="window.open('https://coinranking.com/coin/h0ynh5w7U+bouncyballofofidfun-epb', '_blank')">CoinRanking</button>
+
+							<button class="token-button"
+								onclick="window.open('https://solscan.io/token/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump', '_blank')">Solscan</button>
 
 							<footer class="token-button-help-text">
 								<p class="align-center">
