Added text clarity and jump links to token but sections from header on bouncyball.html and onegiddy.ca

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -89,7 +89,7 @@
 
 		<!-- Header Subpage-->
 		<header class="header-subpage">
-			<a href="/index.html">
+			<a href="#buy-expb">
 				<img src="/assets/images/bouncy-ball-500.png" alt="Bouncy Ball Logo" class="logo">
 			</a>
 		</header>
@@ -291,7 +291,7 @@
 				<header class="major" id="bouncy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>BOUNCY BALL</h1>
-					<p>You can grow value as we grow with Bouncy Ball! Tap or click below to copy the <b>Contract
+					<p>You can grow value as we grow — with Bouncy Ball! Tap or click below to copy the <b>Contract
 							Address</b></p>
 					<p>♻️ Switch to <a href="/onegiddy.html#giddy">GIDDY</a> StableToken 👀</p>
 				</header>
@@ -332,7 +332,7 @@
 				<div id="waitlist-modal" class="modal">
 					<div class="modal-content">
 						<span class="close" onclick="closeModal('waitlist')">&times;</span>
-						<h2>Join Waitlist</h2>
+						<h2>Waitlist</h2>
 						<form>
 							<input type="text" id="waitlist-input" placeholder="Enter your email" required>
 							<button type="submit">Submit</button>
@@ -354,7 +354,7 @@
 				<div id="check-modal" class="modal">
 					<div class="modal-content">
 						<span class="close" onclick="closeModal('check')">&times;</span>
-						<h2>VALIDATE ADDRESS</h2>
+						<h2>Address</h2>
 						<form>
 							<input type="text" id="check-input" placeholder="Enter address/contract (Solana)" required>
 							<div id="validation-message" style="margin-top: 5px; font-size: 14px;"></div>
@@ -808,8 +808,8 @@
 					<!-- Header -->
 					<div>
 						<header class="major" id="buy-expb">
-							<span class="date">Wallets & Providers</span>
-							<h1>Get Tokens</h1>
+							<span class="date">Dynamic Growth Token</span>
+							<h1>Get Bouncy</h1>
 						</header>
 					</div>
 
@@ -905,7 +905,7 @@
 		<footer id="footer">
 			<section id="contact-form">
 				<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-					<h2 class="centered-heading">Redeem</h2>
+					<h2 class="centered-heading">Redeem Gifts</h2>
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
