--- a/onegiddy.html
+++ b/onegiddy.html
@@ -91,9 +91,9 @@
 	<!-- Wrapper -->
 	<div id="wrapper" class="fade-in">
 
-		<!-- Header Subpage-->
+		<!-- Header Subpage -->
 		<header class="header-subpage">
-			<a href="/index.html">
+			<a href="#swap-giddy">
 				<img src="/giddy-logo.png" alt="GIDDY Logo" class="logo">
 			</a>
 		</header>
@@ -286,7 +286,7 @@
 
 			<!-- Chart -->
 			<section id="giddy-chart">
-				<div id="dexscreener-embed"><iframe width="100%" height="600"
+				<div id="dexscreener-embed"><iframe
 						src="https://birdeye.so/tv-widget/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z?chain=solana&viewMode=pair&chartInterval=15&chartType=Candle&chartTimezone=America%2FVancouver&chartLeftToolbar=show&theme=dark"
 						frameborder="0" allowfullscreen>
 					</iframe>
@@ -298,7 +298,7 @@
 				<header class="major" id="giddy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>GIDDY StableToken</h1>
-					<p>Your one-stop shop for all things GIDDY! Tap or click below to copy the <b>Contract Address</b>
+					<p>Explore brand new ways to shop and gift with GIDDY! Tap or click below to copy the <b>Contract Address</b>
 					</p>
 					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY BALL</a> Dynamic Token 👀</p>
 				</header>
@@ -339,7 +339,7 @@
 				<div id="waitlist-modal" class="modal">
 					<div class="modal-content">
 						<span class="close" onclick="closeModal('waitlist')">&times;</span>
-						<h2>Join Waitlist</h2>
+						<h2>Waitlist</h2>
 						<form>
 							<input type="text" id="waitlist-input" placeholder="Enter your email" required>
 							<button type="submit">Submit</button>
@@ -361,7 +361,7 @@
 				<div id="check-modal" class="modal">
 					<div class="modal-content">
 						<span class="close" onclick="closeModal('check')">&times;</span>
-						<h2>VALIDATE ADDRESS</h2>
+						<h2>ADDRESS</h2>
 						<form>
 							<input type="text" id="check-input" placeholder="Enter address/contract (Solana)" required>
 							<div id="validation-message" style="margin-top: 5px; font-size: 14px;"></div>
@@ -821,8 +821,8 @@
 					<!-- Header -->
 					<div>
 						<header class="major" id="swap-giddy">
-							<span class="date">Wallets & Providers</span>
-							<h1>Get Tokens</h1>
+							<span class="date">Giddy's Shop Token</span>
+							<h1>Get GIDDY</h1>
 						</header>
 					</div>
 
@@ -908,7 +908,7 @@
 		<footer id="footer">
 			<section id="contact-form">
 				<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-					<h2 class="centered-heading">Redeem</h2>
+					<h2 class="centered-heading">Redeem Gifts</h2>
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
