Updated Raydium links and pairs follind seeding GIDDY/USD CLMM

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -836,7 +836,7 @@
 								onclick="window.open('https://jup.ag/tokens/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump', '_blank')">Jupiter</button>
 
 							<button class="token-button"
-								onclick="window.open('https://raydium.io/swap/?inputMint=GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump&outputMint=4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R', '_blank')">Raydium</button>
+								onclick="window.open('https://raydium.io/swap/?inputMint=sol&outputMint=GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump', '_blank')">Raydium</button>
 
 							<button class="token-button"
 								onclick="window.open('https://www.coingecko.com/en/coins/bouncy-ball-of-ofid-fun', '_blank')">CoinGecko</button>
