--- a/onegiddy.html
+++ b/onegiddy.html
@@ -299,7 +299,8 @@
 				<header class="major" id="giddy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>GIDDY StableToken</h1>
-					<p>Explore brand new ways to shop and gift with GIDDY! Tap or click below to copy the <b>Contract Address</b>
+					<p>Explore brand new ways to shop and gift with GIDDY! Tap or click below to copy the <b>Contract
+							Address</b>
 					</p>
 					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY BALL</a> Dynamic Token 👀</p>
 				</header>
@@ -847,7 +848,8 @@
 							<button class="token-button-2"
 								onclick="window.open('https://jup.ag/tokens/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z', '_blank')">Jupiter</button>
 
-							<button class="token-button-2" onclick="window.open('#', '_blank')">Raydium</button>
+							<button class="token-button-2"
+								onclick="window.open('https://raydium.io/swap/?inputMint=sol&outputMint=8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z', '_blank')">Raydium</button>
 
 							<button class="token-button-2"
 								onclick="window.open('https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5', '_blank')">GeckoTerminal</button>
