--- a/index.html
+++ b/index.html
@@ -192,12 +192,16 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="/bouncyball.html" class="ad-slide" style="border-bottom: none;">
+					<a href="/bouncyball.html#buy-expb" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 3"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://freeproducer.ca/" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/banner-free-producer.PNG" alt="Ad Banner 4"
 							style="max-width: 100%; height: auto;">
 					</a>
 				</div>
