Replaced Code Wallet with Kinnected and Flipchat with Telegram -- Updates accrtoss cashlinks.html, explore.html and added kinnected.html with updated images

--- a/explore.html
+++ b/explore.html
@@ -353,22 +353,22 @@
 
 						<!-- Quick Start - App 2 -->
 						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/logocode01.jpg" alt="Wallet Icon"></span>
+									src="/assets/images/social-logo/kinnected-01.PNG" alt="Kinnected Logo"></span>
 							<div class="quick-start-content">
-								<h3 class="quick-start-title">Code Wallet</h3>
-								<p class="align-center">By Code Inc</p> <button class="round-button"><a
-										href="/pages/vipwithcode.html">More
+								<h3 class="quick-start-title">Kinnected! Wallet</h3>
+								<p class="align-center">By GFDevSoft</p> <button class="round-button"><a
+										href="/pages/kinnected.html">More
 										Details</a></button>
 							</div>
 						</article>
 
 						<!-- Quick Start - App 3 -->
 						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/flipchat-logo.png" alt="Flipchat OFiD Icon"></span>
+									src="/assets/images/social-logo/IMG_1876.png" alt="Telegram Logo"></span>
 							<div class="quick-start-content">
-								<h3 class="quick-start-title">Flipchat Messenger</h3>
-								<p class="align-center">By Flipchat Inc</p> <button class="round-button"><a
-										href="https://ofidcrypt.ca/flipchat-by-code-inc">More Details</a></button>
+								<h3 class="quick-start-title">Telegram</h3>
+								<p class="align-center">By Telegram FZ LLC</p> <button class="round-button"><a
+										href="https://t.me/OFiDBall">More Details</a></button>
 							</div>
 						</article>
 					</div>
