Fixed OG image preview for kinnected.html and added buy links to expb and giddy digital gift tiles on cashlinks.html.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -166,10 +166,11 @@
 						<!-- Cash Links Block 1 -->
 						<div class="quick-start-items">
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-bouncy.PNG"
-										alt="expb-gift"></span>
+								<a href="/bouncyball.html#buy-expb" class="image left">
+									<img src="/assets/images/dgcl-bouncy.PNG" alt="dgcl-expb">
+								</a>
 								<div class="quick-start-content">
-									<h3>eXPB</h3>
+									<h3>eXPB — Buy</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
 											data-link="https://cash.getcode.com/c/#/e=51ghUktZJYA1wFTcvzytoN"
@@ -178,10 +179,11 @@
 								</div>
 							</article>
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-giddy.PNG"
-										alt="giddy-gift"></span>
+								<a href="/onegiddy.html#swap-giddy" class="image left">
+									<img src="/assets/images/dgcl-giddy.PNG" alt="dgcl-giddy">
+								</a>
 								<div class="quick-start-content">
-									<h3>GIDDY</h3>
+									<h3>GIDDY — Swap</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
 											data-link="https://cash.getcode.com/c/#/e=FSULv8axNzpPwRFqBHhRv7"
@@ -206,8 +208,7 @@
 						<!-- Cash Links Block 2 -->
 						<div class="quick-start-items">
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-one.PNG"
-										alt="one-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-one.PNG" alt="one-gift"></span>
 								<div class="quick-start-content">
 									<h3>ONE</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -218,8 +219,7 @@
 								</div>
 							</article>
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-kin.PNG"
-										alt="kin-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-kin.PNG" alt="kin-gift"></span>
 								<div class="quick-start-content">
 									<h3>KIN</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -230,8 +230,7 @@
 								</div>
 							</article>
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-duno.PNG"
-										alt="duno-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-duno.PNG" alt="duno-gift"></span>
 								<div class="quick-start-content">
 									<h3>DUNO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -246,8 +245,7 @@
 						<!-- Cash Links Block 3 -->
 						<div class="quick-start-items">
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-cpt.PNG"
-										alt="cpt-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-cpt.PNG" alt="cpt-gift"></span>
 								<div class="quick-start-content">
 									<h3>CPT</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -258,8 +256,7 @@
 								</div>
 							</article>
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-mylo.PNG"
-										alt="mylo-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-mylo.PNG" alt="mylo-gift"></span>
 								<div class="quick-start-content">
 									<h3>MYLO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -270,8 +267,7 @@
 								</div>
 							</article>
 							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-sinu.PNG"
-										alt="sinu-gift"></span>
+								<span class="image left"><img src="/assets/images/dgcl-sinu.PNG" alt="sinu-gift"></span>
 								<div class="quick-start-content">
 									<h3>SINU</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
