updated image poster on kinnected.html.

--- a/pages/kinnected.html
+++ b/pages/kinnected.html
@@ -185,7 +185,7 @@
 										video.addEventListener('ended', function () {
 											this.currentTime = 0; // Reset video to start
 											this.pause(); // Pause the video
-											this.poster = '../assets/images/bgcode01.png'; // Set the new poster image
+											this.poster = '../assets/images/webp/bg-kinnected-cashlinks.webp'; // Set the new poster image
 										});
 									});
 								});
