Added css for portrait-video hosted on kinnected.html. Added Kin gift icon and fixed OG image preview file extension on cashlinks.html

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -58,7 +58,7 @@
 	<meta name="twitter:title" content="Digital Gift Cash Links | OFiDCrypt">
 	<meta name="twitter:description"
 		content="Receiving digital gifts is easier than ever, thanks to Kinnected Wallet. Claim your tokens today!">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-kinnected-cashlinks">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-kinnected-cashlinks.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/cashlinks">
 
 	<!-- Default ICO file with multiple sizes -->
