Updated video preview on kinnected.html and fixed cashlinks formatting. Added X URLs for ONE Kin projects on cashlinks.html. Updated CSS to add an independant class for cashlinks (split from quick-start-items).

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -157,19 +157,19 @@
 				<header class="major">
 					<span class="date">Kinnected! Wallet</span>
 
-					<!-- Quick Start Section -->
-					<section class="quick-start-section">
+					<!-- Cash Links Section -->
+					<section class="cashlinks-section">
 						<header>
 							<h2>Digital Gifts</h2>
 						</header>
 
 						<!-- Cash Links Block 1 -->
-						<div class="quick-start-items">
-							<article class="quick-start-item">
+						<div class="cashlinks-items">
+							<article class="cashlinks-item" id="expb">
 								<a href="/bouncyball.html#buy-expb" class="image left">
 									<img src="/assets/images/dgcl-bouncy.PNG" alt="dgcl-expb">
 								</a>
-								<div class="quick-start-content">
+								<div class="cashlinks-content">
 									<h3>eXPB — Buy</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -178,11 +178,12 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
+
+							<article class="cashlinks-item" id="giddy">
 								<a href="/onegiddy.html#swap-giddy" class="image left">
 									<img src="/assets/images/dgcl-giddy.PNG" alt="dgcl-giddy">
 								</a>
-								<div class="quick-start-content">
+								<div class="cashlinks-content">
 									<h3>GIDDY — Swap</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -191,10 +192,13 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-dobby.PNG"
-										alt="Event Icon"></span>
-								<div class="dobby-gift">
+
+							<article class="cashlinks-item" id="dobby">
+								<a href="https://x.com/Dobby_Coin?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-dobby.PNG" alt="dgcl-dobby">
+								</a>
+								<div class="cashlinks-content dobby-gift">
 									<h3>DOBBY</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -206,10 +210,13 @@
 						</div>
 
 						<!-- Cash Links Block 2 -->
-						<div class="quick-start-items">
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-one.PNG" alt="one-gift"></span>
-								<div class="quick-start-content">
+						<div class="cashlinks-items">
+							<article class="cashlinks-item" id="one">
+								<a href="https://x.com/OneKinCommunity?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-one.PNG" alt="one-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>ONE</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -218,9 +225,13 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-kin.PNG" alt="kin-gift"></span>
-								<div class="quick-start-content">
+
+							<article class="cashlinks-item" id="kin">
+								<a href="https://x.com/OneKinCommunity?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-kin.PNG" alt="kin-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>KIN</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -229,9 +240,13 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-duno.PNG" alt="duno-gift"></span>
-								<div class="quick-start-content">
+
+							<article class="cashlinks-item" id="duno">
+								<a href="https://x.com/dunoglobal?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-duno.PNG" alt="duno-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>DUNO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -243,10 +258,13 @@
 						</div>
 
 						<!-- Cash Links Block 3 -->
-						<div class="quick-start-items">
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-cpt.PNG" alt="cpt-gift"></span>
-								<div class="quick-start-content">
+						<div class="cashlinks-items">
+							<article class="cashlinks-item" id="cpt">
+								<a href="https://x.com/CaptTrench?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-cpt.PNG" alt="cpt-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>CPT</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -255,9 +273,13 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-mylo.PNG" alt="mylo-gift"></span>
-								<div class="quick-start-content">
+
+							<article class="cashlinks-item" id="mylo">
+								<a href="https://x.com/MYLOCAT_?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-mylo.PNG" alt="mylo-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>MYLO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -266,9 +288,13 @@
 									</button>
 								</div>
 							</article>
-							<article class="quick-start-item">
-								<span class="image left"><img src="/assets/images/dgcl-sinu.PNG" alt="sinu-gift"></span>
-								<div class="quick-start-content">
+
+							<article class="cashlinks-item" id="sinu">
+								<a href="https://x.com/Sock_Inu?s=20" class="image left" target="_blank"
+									rel="noopener noreferrer">
+									<img src="/assets/images/dgcl-sinu.PNG" alt="sinu-gift">
+								</a>
+								<div class="cashlinks-content">
 									<h3>SINU</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
@@ -278,6 +304,7 @@
 								</div>
 							</article>
 						</div>
+
 
 						<div id="recaptchaForLinks" class="g-recaptcha"
 							data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
