--- a/explore.html
+++ b/explore.html
@@ -368,7 +368,7 @@
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Telegram</h3>
 								<p class="align-center">By Telegram FZ LLC</p> <button class="round-button"><a
-										href="https://t.me/OFiDBall">More Details</a></button>
+										href="https://t.me/OFiDBall">Join Now</a></button>
 							</div>
 						</article>
 					</div>
