--- a/pages/kinnected.html
+++ b/pages/kinnected.html
@@ -183,7 +183,7 @@
 								Your browser does not support the video tag.
 							</video>
 							<!-- Poster overlay (visible before play and after video ends) -->
-							<img class="video-poster-overlay" src="../assets/images/bg-kinnected-wallpaper.jpg"
+							<img class="video-poster-overlay" src="../assets/images/bg-kinnected-wallpaper-play.PNG"
 								alt="Kinnected video thumbnail">
 						</div>
 
@@ -222,6 +222,7 @@
 						});
 					});
 				</script>
+				
 				<!-- Section Heading -->
 				<header id="get-ahead-section">
 					<h2 class="align-center">Start Exploring</h2>
