Added first KIN Cashlink!

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -235,7 +235,7 @@
 									<h3>KIN</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=DX2ocy9doTt9NZKxPAXthN"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766527744504"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
