--- a/cashlinks.html
+++ b/cashlinks.html
@@ -229,7 +229,7 @@
 							<article class="cashlinks-item" id="kin">
 								<a href="https://x.com/OneKinCommunity?s=20" class="image left" target="_blank"
 									rel="noopener noreferrer">
-									<img src="/assets/images/dgcl-kin.PNG" alt="kin-gift">
+									<img src="/assets/images/dgcl-kin.png" alt="kin-gift">
 								</a>
 								<div class="cashlinks-content">
 									<h3>KIN</h3>
