--- a/pages/kinnected.html
+++ b/pages/kinnected.html
@@ -158,7 +158,7 @@
 					<span class="date">By GFDevSoft</span>
 					<h1>Kinnected <br />
 						Wallet</h1>
-					<p>Unlock a whole new world of web3 experiences through this community partner app by GFDevSoft.
+					<p>Unlock a whole new world of web3 experiences through a community collaboration — an app by GFDevSoft.
 						Gain access
 						to features such as claimable cash links, and get chatting in a brand new way! Engage with
 						friends and join communities, all in one place. Go to the "Digital Gifts"
@@ -172,7 +172,7 @@
 						<h2 class="align-center">A Fresh Social Experience</h2>
 						<!-- Section Description -->
 						<p class="align-center">Kinnected Wallet is more than just a secure place to store your tokens;
-							it's also a tool for sending and receiving payments among friends. It serves as your gateway
+							it's a tool for sending and receiving payments among friends. It serves as your gateway
 							to a new generation
 							of communities and spending.</p>
 
@@ -226,8 +226,8 @@
 				<!-- Section Heading -->
 				<header id="get-ahead-section">
 					<h2 class="align-center">Start Exploring</h2>
-					<p class="align-center">Download the app today and unlock new services and share cash between your
-						friends and accross the web.</p>
+					<p class="align-center">Download the app and unlock new services and share cash between your
+						friends and accross the web -- Coming soon to Google Play.</p>
 				</header>
 
 				<!-- Quick Start: Featured -->
