Updated all cashlinks fo GFDevSoft on cashlinks.html. Renamed button and made it .onclick.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -94,7 +94,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -173,7 +173,7 @@
 									<h3>eXPB — Buy</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=51ghUktZJYA1wFTcvzytoN"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792617348"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -187,7 +187,7 @@
 									<h3>GIDDY — Swap</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=FSULv8axNzpPwRFqBHhRv7"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -202,7 +202,7 @@
 									<h3>DOBBY</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=Hgj2fWWBWXJn9kACNsJeBj"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766791372692"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -220,7 +220,7 @@
 									<h3>ONE</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=HGRSqU8FshxfKuf4YWsqEd"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -250,7 +250,7 @@
 									<h3>DUNO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=6WUB26RZbhfHCTt13EgAHi"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766790854415"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -268,7 +268,7 @@
 									<h3>CPT</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=J4T6Kx7FyRaug3p76xkfpN"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792808291"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -283,7 +283,7 @@
 									<h3>MYLO</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=NoEeYdR9cJkHccmidPUrkp"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792905923"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
@@ -298,18 +298,21 @@
 									<h3>SINU</h3>
 									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 										<a href="javascript:void(0);"
-											data-link="https://cash.getcode.com/c/#/e=TYti26BQLjQeWwE1dLhawu"
+											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792407380"
 											onclick="event.preventDefault();">Claim Cash</a>
 									</button>
 								</div>
 							</article>
 						</div>
 
-
 						<div id="recaptchaForLinks" class="g-recaptcha"
 							data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
 						<ul class="actions special">
-							<li><a href="/pages/kinnected.html" class="button">Exit to Lounge</a></li>
+							<li>
+								<button class="button" onclick="window.location.href='/pages/kinnected.html';">
+									Learn More
+								</button>
+							</li>
 						</ul>
 					</section>
 				</header>
